[gd_scene load_steps=6 format=3 uid="uid://b2e55bkawvrt6"]

[ext_resource type="Script" path="res://scripts/menu_logic.gd" id="1_8iq4e"]
[ext_resource type="FontFile" uid="uid://cr5xqdjcwmv8o" path="res://PixelOperator8.ttf" id="2_tpqyd"]
[ext_resource type="Texture2D" uid="uid://cc7bvoy8o6bjk" path="res://assets/Premium Platformer Asset Pack/Premium Platformer Asset Pack/Premium Platformer Asset Pack/Tilesets/Pattern_Blue_&_Grey.png" id="3_kb4kh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yvsql"]
texture = ExtResource("3_kb4kh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_n4xbu"]
sources/0 = SubResource("TileSetAtlasSource_yvsql")

[node name="MenuScene" type="Node"]
script = ExtResource("1_8iq4e")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Play5Words" type="Button" parent="."]
z_index = 10
offset_left = -64.0
offset_top = -40.0
offset_right = 64.0
theme_override_fonts/font = ExtResource("2_tpqyd")
theme_override_font_sizes/font_size = 16
text = "5 WORDS"

[node name="Label" type="Label" parent="."]
offset_left = -176.0
offset_top = -144.0
offset_right = 176.0
offset_bottom = -64.0
theme_override_fonts/font = ExtResource("2_tpqyd")
theme_override_font_sizes/font_size = 32
text = "SECRET SPRINT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Best5WordTime" type="Label" parent="."]
offset_left = 64.0
offset_top = -32.0
offset_right = 256.0
theme_override_fonts/font = ExtResource("2_tpqyd")
theme_override_font_sizes/font_size = 16
text = "Best time:"

[node name="ResetRecordsButton" type="Button" parent="."]
offset_left = 240.0
offset_top = 112.0
offset_right = 280.0
offset_bottom = 152.0

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_n4xbu")

[connection signal="pressed" from="Play5Words" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Play5Words" to="." method="_on_play_5_words_pressed"]
[connection signal="pressed" from="ResetRecordsButton" to="." method="_on_reset_records_button_pressed"]
